Caching of the weather API result added and removal of '/admin' from endpoints
